quarkus-getting-started/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      serviceAccountName: quarkus-qs-kube-sa
      nodeSelector:
        iam.gke.io/gke-metadata-server-enabled: "true"
      containers:
      - name: java-app-container
        image: us-central1-docker.pkg.dev/halogen-honor-403909/quickstart-docker-repo/quickstart-image:tag6
        ports:
        - containerPort: 8080
      livenessProbe:
        httpGet:
          path: /q/health/live
          port: 8080
        initialDelaySeconds: 3
